Revidert hele prosessrapporten, utenom avsluttning

--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -35,17 +35,17 @@ Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av fasilit
 	Gruppen ble også bevisst på et annet problem under videre diskusjon om spillideen – selv om ideen utviklet seg raskt og det var stor enighet i gruppen, så vi allikevel at når vi satte oss ned og tegnet ut ideene på hvert vårt papir at flere av oss så for oss ganske forskjellige ting. Selv om kommunikasjonen så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster, var det likevel store forskjeller i hva de forskjellige medlemmene trodde vi diskuterte. Her har Schwarz en teori om at man ved å dele all relevant informasjon, og alltid spille med åpne kort og konsekent avdekke resonnementene bak de innspillene man kommer med, vil man bedre kunne hjelpe gruppen i å arbeide effektivt sammen. Ved å gå mer i dybden på det vi diskuterer, snakke om detaljer og å være klar over at vi tenker forskjellig fører videre til at slike misforståelser blir unngått. Det å kartlegge slike ulikheter kan også brukes som en fordel i gruppen. I neste avsnitt reflekteres det over denne situasjonen i forhold til gruppemedlemmenes ulike tankegang.
 
 	\subsection{Refleksjon} %johnson, kap 10
-	Johnson og Johnson \cite{Johnson} understreker i sin artikkel viktigheten av mangfold i en gruppe, at ulike personligheter er en forutsetning for at gruppen skal være velfungerende. Det at gruppens medlemmer tenker forskjellig kan virke frusterende når man skaper en idé, men dersom gruppen klarer å kartlegge disse ulikhetene kan gruppemedlemmenes ulike tankegang bidra til å skape noe større og bredere enn hvis alle på gruppen hadde hatt helt lik tankegang. I vårt tilfelle er de personlige karaktererforskjellene blant annet kjønn, studieretning og ulike verdier og meninger, i tillegg til ulik erfaring og kunnskap. De på gruppen som studerer eller har studert datarelaterte emner, det vil si Kjetil, Trond og Christian, er noe mer likesinnede og har ofte like forestillinger under idéutviklingen. De tar hensyn til programmering og gjennomføring av spillet, noe som Andreas og Ina ikke tenker på, ettersom de ikke har noe kunnskap innen dette feltet. Ina og Andreas tar derimot andre ting i betrakning under idéutviklingen, hvor blant annet inkorporering av biologi og geologi i spillet står sentralt.
+	Johnson og Johnson \cite{Johnson} understreker i sin artikkel viktigheten av mangfold i en gruppe, at ulike personligheter er en forutsetning for at gruppen skal være velfungerende. Det at gruppens medlemmer tenker forskjellig kan virke frustrerende når man skaper en idé, men dersom gruppen klarer å kartlegge disse ulikhetene kan gruppemedlemmenes ulike tankegang bidra til å skape noe større og bredere enn hvis alle på gruppen hadde hatt helt lik tankegang. I vårt tilfelle er de personlige karaktererforskjellene blant annet kjønn, studieretning og ulike verdier og meninger, i tillegg til ulik erfaring og kunnskap. De på gruppen som studerer eller har studert datarelaterte emner, det vil si Kjetil, Trond og Christian, er noe mer likesinnede og har ofte like forestillinger under idéutviklingen. De tar hensyn til programmering og gjennomføring av spillet, noe som Andreas og Ina ikke tenker på, ettersom de ikke har noe kunnskap innen dette feltet. Ina og Andreas tar derimot andre ting i betrakning under idéutviklingen, hvor blant annet inkorporering av biologi og geologi i spillet står sentralt.
 
 	% Flytte den litt ned, eller i allefall et annet sted.
 	% Teori - erfaringer - forsettelse på den samme teorien blir litt rotete.
 	Dette fører til at når vi i situasjoner kommer frem til noe alle er enige i, betyr ikke dette at man alltid vet \emph{hva man er enige om}. Fordi gruppens medlemmer, på grunn av deres ulike erfaringer og (ubevisste) preferanser, har ulike bilder i tankene om hvordan de ser for seg denne ideen. Vi fant ut at dette var tilfelle. Så hvordan kan vi dra nytte av dette?
 
-	I utgangspunktet skulle man tro at en homogen gruppe som består av datastudenter er det optimale i gjennomførelsen av et slikt prosjekt. Johnson og Johnson nevner flere ulemper ved en lik gruppe. I denne situasjonen skal vi nevne en av disse ulempene. En slik gruppe kan mangle et bredt perspektiv. Kjetil, Trond og Christian ville antageligvis klart å lage et godt produkt, men med en homogen tankegang er det antageligvis mange ting de ikke ville ha tenkt på. Ina og Andreas, som ikke har kunnskaper innen programmering, ser på oppgaven i et annet perspektiv enn resten av gruppen. Selv om de har ikke noe å bidra med rent teknisk til resultatet, ser på ting annerledes og kaster lys over oppgaven på en måte datastudentene ikke tar i betrakning. Da vi prøvde å flette sammen hver persons synspunkt på hva vi trodde vi hadde kommet frem til, førte dette til at hele gruppen endret sin personlige idé over hva vi hadde diskutert og gjorde det om til gruppen sin idé. Dette resulterte i noe ingen på gruppen hadde sett for seg, men som alle var veldig fornøyde med.  Kjetil mente først at denne diskusjonen var sløsing og tid og så på dette som en unødvendig del av gruppearbeidet. Men den ideen gruppen satt igjen med på slutten av dagen fikk Kjetil til å tenke annerledes. Han ble overrasket over at hans eget syn på dataspillet vi utviklet ble såpass endret da de andre på gruppen fortalte hva de tenkte. 
+	I utgangspunktet skulle man tro at en homogen gruppe som består av datastudenter er det optimale i gjennomførelsen av et slikt prosjekt. Johnson og Johnson nevner flere ulemper ved en lik gruppe. I denne situasjonen skal vi nevne en av disse ulempene. En slik gruppe kan mangle et bredt perspektiv. Kjetil, Trond og Christian ville antageligvis klart å lage et godt produkt, men med en homogen tankegang er det antageligvis mange ting de ikke ville ha tenkt på. Ina og Andreas, som ikke har kunnskaper innen programmering, ser på oppgaven i et annet perspektiv enn resten av gruppen. Selv om de har ikke noe å bidra med rent teknisk til resultatet, ser på ting annerledes og kaster lys over oppgaven på en måte datastudentene ikke tar i betrakning. Da vi prøvde å flette sammen hver persons synspunkt på hva vi trodde vi hadde kommet frem til, førte dette til at hele gruppen endret sin personlige idé over hva vi hadde diskutert og gjorde det om til gruppen sin idé. Dette resulterte i noe ingen på gruppen hadde sett for seg, men som alle var veldig fornøyde med.  Kjetil mente først at denne diskusjonen var sløsing med tid og så på dette som en unødvendig del av gruppearbeidet. Men den ideen gruppen satt igjen med på slutten av dagen fikk Kjetil til å tenke annerledes. Han ble overrasket over at hans eget syn på dataspillet vi utviklet ble såpass endret da de andre på gruppen fortalte hva de tenkte. 
 
 
 	% Sette inn hvor det passer
-Som datastudenter med programmeringserfaring er det alltid en overhengende fare for at en begrenser ideer ved å tenke at "dette er ikke mulig å gjennomføre", hvor en heller burde tenke "dette er vanskelig å gjennomføre", eller "dette kan ikke  \emph{jeg} gjennomføre". Det er det svært lurt å ikke legge for stor vekt på hva som er mulig og umulig. Det å involvere mennesker uten programmeringserfaring kan derfor være en fordel i slike prosjekter, spesielt, da det er slik i Eksperter i Team at et godt konsept stiller like sterkt som en god gjennomføring. 
+Som datastudenter med programmeringserfaring er det alltid en overhengende fare for at en begrenser ideer ved å tenke at "dette er ikke mulig å gjennomføre", hvor en heller burde tenke "dette er vanskelig å gjennomføre", eller "dette kan ikke  \emph{jeg} gjennomføre". Da er det svært lurt å ikke legge for stor vekt på hva som er mulig og umulig. Det å involvere mennesker uten programmeringserfaring kan derfor være en fordel i slike prosjekter, spesielt, da det er slik i Eksperter i Team at et godt konsept stiller like sterkt som en god gjennomføring. 
 
 
 Ulike synspunkt og meninger, i tillegg til ulik faglig kompetanse og tankegang, førte til et resultat ingen på gruppen så for seg i starten, men som alle var meget fornøyde med. Vi klarte med andre ord å dra nytte av synergieffektene som kommer av vår ulikheter.
@@ -102,7 +102,7 @@ Blå hatt & Prosessblikk \\
 		\end{figure}
 		
 		
-Gruppen som hadde presentasjon fikk etter tur tilbakemeldinger fra de forskjellige hattene. Dette var en bra måte for å få startet en diskusjon. Det var også et verktøy som bidro til å hjelpe gruppen med sitt videre arbeid på prosjektet. Hver gruppe fikk prøve seg som hver hatt. Videre gjennomgår vi de ulike situasjonen vi var i som hver hatt, og hvordan det føltes og gå inn i de forskjellige rollene.
+Gruppen som hadde presentasjon fikk etter tur tilbakemeldinger fra de forskjellige hattene. Dette var en bra måte for å få startet en diskusjon. Det var også et verktøy som bidro til å hjelpe gruppen med sitt videre arbeid på prosjektet. Hver gruppe fikk prøve seg som hver hatt. Videre gjennomgår vi de ulike situasjonen vi var i som hver hatt, og hvordan det føltes å gå inn i de forskjellige rollene.
 
 \subsection{De ulike rollene}
 Under den første presentasjonsrunden ble vår gruppe tildelt den røde hatten (følelse og intuisjon). Vi var litt usikre på hvordan vi skulle håndtere dette, og hva vi skulle se etter under presentasjonen. Kjetil synes det ble litt rart å prøve å fokusere på spesifikke ting ved presentasjonen, men så i etterkant hvor nyttig dette var. Det var  kun Kjetil og Andreas som kom med uttalelser om sine følelser rundt presentasjonen. De andre på gruppen synes at det var vanskelig å fortelle hva en føler om en presentasjon. Men Andreas mente at man kun trengte å si det første man tenkte på, og at dette var en enkel oppgave. 
@@ -115,21 +115,21 @@ Gruppen slet litt med å komme med innspill under den grønne hatten (kreativite
 
 
 \subsection{I sentrum av seks hatter}
-Det å få vårt eget prosjekt tatt i fra hverandre på denne måten var en lærerik affære. Det ble pekt på en del elementer som vi selv har diskutert mye tidligere, spesielt valget mellom det å implementere spillet som sanntid eller turbasert. Av de tilbakemeldinger vi fikk kunne det virke som om andre så for seg at spillet ville fungere bedre som et turbasert spill. Det var og spørsmål om spillets moral, og om spillet vårt egentlig ville være lærerikt. Det virket dog som vi hadde tenkt på det meste som ble kommentert, og vi føler vi har god kontroll. Alt i alt følte vi dog at tilbakemeldingene vi fikk var av en positiv art, noe vi følte oss svært fornøyde med. Vi var spesielt fornøyde med tilbakemeldinger fra den røde hatten. Det gikk igjen at intuisjonen til de andre i landsbyen var at vårt konsept virket spennende og at man ikke burde utvide det noe videre. Den grønne (kreativitet) og gule (muligheter) hatten kom med flere interesante innspill. Men ingen av tilbakemeldingene her var ting vi ikke hadde diskutert tidligere i prosessen. De kritiske tilbakemeldingene vi fikk fra den svarte hatten og spørsmål knyttet til prosessen fra den blå hatten handlet i større grad om hvordan vi skal klare å publisere ideen vår og konkurrere mot tilsvarende spill. Christian mente at dette egentlig var positive kommentarer, ettersom det viste at de andre i landsbyen hadde stor tro på idèen vår. 
+Det å få vårt eget prosjekt tatt i fra hverandre på denne måten var en lærerik affære. Det ble pekt på en del elementer som vi selv har diskutert mye tidligere, spesielt valget mellom det å implementere spillet som sanntid eller turbasert. Av de tilbakemeldinger vi fikk kunne det virke som om andre så for seg at spillet ville fungere bedre som et turbasert spill. Det var og spørsmål om spillets moral, og om spillet vårt egentlig ville være lærerikt. Det virket dog som vi hadde tenkt på det meste som ble kommentert, og vi føler vi har god kontroll. Alt i alt følte vi dog at tilbakemeldingene vi fikk var av en positiv art, noe vi følte oss svært fornøyde med. Vi var spesielt fornøyde med tilbakemeldinger fra den røde hatten. Det gikk igjen at intuisjonen til de andre i landsbyen var at vårt konsept virket spennende og at man ikke burde utvide det noe videre. Den grønne (kreativitet) og gule (muligheter) hatten kom med flere interessante innspill. Men ingen av tilbakemeldingene her var ting vi ikke hadde diskutert tidligere i prosessen. De kritiske tilbakemeldingene vi fikk fra den svarte hatten og spørsmål knyttet til prosessen fra den blå hatten handlet i større grad om hvordan vi skal klare å publisere ideen vår og konkurrere mot tilsvarende spill. Christian mente at dette egentlig var positive kommentarer, ettersom det viste at de andre i landsbyen hadde stor tro på idèen vår. 
 
 
 \subsection{Hvilke hatter har vi i gruppen?}
 Det å ha rollen som den kritiske svarte hatten synes Andreas passet bra til ham, ettersom han ofte leter etter ting å være kritiske til i slike situasjoner. Utfordringen ligger i å velge ord med omhu. Han følte seg mest komfortabel med den røde hatten; å si hva han føler og mener uten begrunnelse. Dette passer bra med gruppens beskrivelse av Andreas. Andreas oppdaget også at enkelte av landsbyens medlemmer passet godt til den grønne hatten, ettersom det stadig var de samme deltakerne som kom med kreative innslag.
 
-Christian syntes også at den svarte hatten passet bra til han. Han liker å være kritisk til nye idèer for å være en deltaker i forbedringer rundt dette. Dette passer bra til resultatet Christian fikk etter SPGR-øvelsen (se avsnitt 4?: Person gruppe relasjon), der han i den situasjonen så seg selv som en analytisk og påståelig person. Christian likte ikke den blå hatten. Han synes det var kjedelig å sette seg inn i en saklig og prosessrelatert rolle som ikke kom med egne meninger og innspill.
+Christian syntes også at den svarte hatten passet bra til han. Han liker å være kritisk til nye idèer for å være en deltaker i forbedringer rundt dette. Dette passer bra til resultatet Christian fikk etter SPGR-øvelsen (se avsnitt 5: Person gruppe relasjon), der han i den situasjonen så seg selv som en analytisk og påståelig person. Christian likte ikke den blå hatten. Han synes det var kjedelig å sette seg inn i en saklig og prosessrelatert rolle som ikke kom med egne meninger og innspill.
 
 Trond syntes det var vanskelig å snevre inn sine tilbakemeldinger til en kategori. Han skulle ønske at man kunne være kritisk samtidig som man diskuterer muligheter og er kreativ. 
 
-Kjetil likte best den rød hatten; å fortelle magefølelsen sin uten begrunnelse. Kjetil likte derimot ikke å ta på seg den kritiske rollen som en svart hatt, blandt annet fordi han selv måtte være observant på å identifisere negative sider ved presentasjonene. Han likte heller ikke at folk visste at han "nå skal den svarte hatten snakke", ettersom tilskuerne da forventer at han skal si noe negativt. De Bono beskriver dette som et av poengene med å metaforisk ha på seg en hatt. De andre skal vite hvilken rolle du har slik at du får oppmerksomheten rundt hvilken hatt du har på det. 
+Kjetil likte best den rød hatten; å fortelle magefølelsen sin uten begrunnelse. Kjetil likte derimot ikke å ta på seg den kritiske rollen som en svart hatt, blant annet fordi han selv måtte være observant på å identifisere negative sider ved presentasjonene. Han likte heller ikke at folk visste at "nå skal den svarte hatten snakke", ettersom tilskuerne da forventer at han skal si noe negativt. De Bono beskriver dette som et av poengene med å metaforisk ha på seg en hatt. De andre skal vite hvilken rolle du har slik at du får oppmerksomheten rundt hvilken hatt du har på deg. 
 
-Ina deltok ikke på denne øvelsen, men har likevel prøvd å idenfisere seg selv som en av hattene. Hun stod mellom den hvite hatten og den gule hatten. Hun liker å ha en nøytralt syn og å fokusere på fakta og informasjon, samt snakke om muligheter og gi positive tilbakemeldinger. Hun liker ikke å være kritisk eller snakke om negative følelser, ettersom hun er redd for hva folk tenker om henne i slike situasjoner. De Bono legger vekt på at hattene vi metaforisk tar på oss er et kostyme som sjuler våre personligheter og kler oss ut som en bestemt person. Dermed kan man oppføre seg som den personen man har "kledd seg ut" som. Med dette i tankene mener Ina at hun kunne tatt på seg rollen som hvilken som helst hatt, men hun foretrekker den hvite og gule, ettersom dette reflekterer henne bedre i en dagligdags situasjon til vanlig.
+Ina deltok ikke på denne øvelsen, men har likevel prøvd å idenfisere seg selv som en av hattene. Hun stod mellom den hvite hatten og den gule hatten. Hun liker å ha et nøytralt syn og å fokusere på fakta og informasjon, samt snakke om muligheter og gi positive tilbakemeldinger. Hun liker ikke å være kritisk eller snakke om negative følelser, ettersom hun er redd for hva folk tenker om henne i slike situasjoner. De Bono legger vekt på at hattene vi metaforisk tar på oss er et kostyme som sjuler våre personligheter og kler oss ut som en bestemt person. Dermed kan man oppføre seg som den personen man har "kledd seg ut" som. Med dette i tankene mener Ina at hun kunne tatt på seg rollen som hvilken som helst hatt, men hun foretrekker den hvite og gule, ettersom dette reflekterer henne bedre i en dagligdags situasjon til vanlig.
 
-Selv om vi ikke bruker denne øvelsen i gruppen, kan man se ut i fra hva gruppemedlemmene likte og ikke likte, hvilket personligheter som framkommer under en tilbakemeldingssituasjon eller diskusjon i gruppen. Gruppen er godt representert med deltakere som liker å være kritiske og fortelle om sine intuisjoner og følelser. Christian, Andreas og Kjetil faller i disse to kategoriene, som røde og svarte hatter. Trond er et godt kreativt samt kritisk bidrag, mens Ina liker best å snakke om informasjon og muligheter. Med dette er alle hattene, unntagen den blå, representert i gruppen. Dette er med til å bidra til en effektiv gruppe som får belyst idèer, muligheter og meninger fra forskjellig vinkler. 
+Selv om vi ikke bruker denne øvelsen i gruppen, kan man se ut i fra hva gruppemedlemmene likte og ikke likte, hvilke personligheter som framkommer under en tilbakemeldingssituasjon eller diskusjon i gruppen. Gruppen er godt representert med deltakere som liker å være kritiske og fortelle om sine intuisjoner og følelser. Christian, Andreas og Kjetil faller i disse to kategoriene, som røde og svarte hatter. Trond er et godt kreativt samt kritisk bidrag, mens Ina liker best å snakke om informasjon og muligheter. Med dette er alle hattene, unntagen den blå, representert i gruppen. Dette er med til å bidra til en effektiv gruppe som får belyst idèer, muligheter og meninger fra forskjellig vinkler. 
 
 Den blå hatten (prosessblikk) var det ingen på gruppen som kjente seg igjen i. Vi tenker at en slik person er en slags gruppeleder som har kontroll på hvordan gruppen ligger an, hva som må gjøres og hvordan man skal planlegge fremover. Kjetil mener at flere på gruppen egentlig har et prosessblikk på gruppearbeider, og at dette kanskje er noe man ikke tenker over. I tillegg har vi landsbylederen og fascilitatorene som følger oss opp. Dermed er alle hattene representert i gruppen vår.
 
@@ -137,8 +137,7 @@ Den blå hatten (prosessblikk) var det ingen på gruppen som kjente seg igjen i.
 Alle gruppemedlemmene syntes at De Bonos hatter var et nyttig verktøy. Det kan være en fin øvelse å bruke i utviklingsfasen av konseptet vårt. Vi bestemte oss for å ta en gjennomgang av hele prosjektet vårt en måned frem i tid ved bruk av De Bonos hatter. Dermed sikrer vi oss at alle aspekter blir tatt opp, og om det er noe vi kan endre/forbedre før vi sier oss fornøyde. Det er også viktig at alle på gruppen får være de forskjellige hattene, til og med de rollene man ikke liker. Det er for eksempel viktig at Ina og Kjetil tar på seg rollen som den kritiske. De andre på gruppen er ofte kritiske, men Ina og Kjetil sitter kanskje inne med kritikk de ikke vil ta opp som kan være avgjørende for prosjektets ferdigstilling. 
 
 
-
-\section{Person- Gruppe Relasjon} %SPGR-øvelsen 21.03
+\section{Person-Gruppe Relasjon} %SPGR-øvelsen 21.03
 Den 21. mars bestemte gruppen seg for å gjennomføre en SPGR- test (Systematisere Person-Gruppe Relasjonen). Det var tidlig på morgenen, og gruppemedlemmene hadde nettopp fått en kopp kaffe. Produktiviteten var lav, og muligheten til å kvikne til med en gruppeøvelse var forlokkende. Hensikten med denne øvelsen var å se på hvilke typer adferd som fant sted i gruppen, gitt en bestemt situasjon. 
 
 Gruppen ble gitt 3 minutter til å bestemme seg for en situasjon de ville analysere. Generelt har det ikke vært noen store konflikter innad i gruppen, men det var to situasjoner som pekte seg ut som mer konfliktfulle enn andre. Den første situasjonen var valg av konsept, mens den andre situasjonen var en beslutning på om det endelige konseptet skulle spilles i sanntid eller om det skulle være turbasert. Den sistnevnte situasjonen ble valgt, da det var enighet om at det var gruppens mest konfliktfylte situasjon. Trond ønsket at spillet skulle være turbasert, mens de andre gruppemedlemmene så for seg at spillet skulle spilles i sanntid. Andreas var redd for at dette var et dårlig valg av situasjon, ettersom Trond stod alene mot resten av gruppen. Men Trond syntes det var ok. Resultatet kunne bli interessant.
