lagt inn biohazards

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -86,7 +86,8 @@ Lokale geologiske katastrofer er jordskjelv og kolliderende isfjell. Jordskjelv 
 
 
 \subsubsection{Biohazarder}
-Biologiske katastrofer... INA.. kun lokale katastrofer=?
+Et resultat av mye forsøpling av hav og øyer kan være biologiske katastrofer, der et eksempel som vil ramme alle øyene er sur nedbør. Dette vil gi korrosjon av våpen og forsvarsmurer laget av metall og dermed skade disse, samt at planter og trær også vil ta skade og gi øya et trist utseende.
+I tillegg kan lokale biologiske katastrofer inntreffe, der det vil bryte ut sykdommer pga bakterievekst som gjør at utvinning av ressurser på miljøstasjonen og muligheten for våpenangrep stanser opp for en periode.
 
 
 \subsection{Spillatmosfære}
