--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -6,7 +6,7 @@
 
 %%% Preamble
 \documentclass[paper=a4, fontsize=12pt]{scrartcl}	% Article class of KOMA-script with 11pt font and a4 format
-\usepackage[norsk]{babel}														% English language/hyphenation
+\usepackage[english]{babel}														% English language/hyphenation
 \usepackage[protrusion=true,expansion=true]{microtype}				% Better typography
 \usepackage{amsmath,amsfonts,amsthm}										% Math packages
 \usepackage[pdftex]{graphicx}														% Enable pdflatex
