--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -12,15 +12,24 @@ i Garbage Alert.
 \subsubsection{Ressurser}
 Ressurser er et viktig element i Garbage Alert. Ressursene er det som
 gjør at spillere kan utvikle basen sin, bygge forsvar og utvikle angrep.
+!!Todo: Andreas, skrive litt om valga av de ulike ressursene?
 De forskjellige typene utvinnbare ressurser er:
 \begin{description}
 	\item \textbf{Papp}\\ Denne ressursen kan utvinnest uten å måtte
-oppgradere miljøstasjonen.
-	\item \textbf{Plast}
-	\item \textbf{Tre}
-	\item \textbf{Jern}
-	\item \textbf{Stål}
-	\item \textbf{Titan}
+oppgradere miljøstasjonen. Dette er den enkleste ressursen å få fatt i,
+men skaper kun relativt svake angrep/forsvar.
+	\item \textbf{Plast}\\ Denne ressursen kan man utvinne etter å ha
+oppgradert hovedbasen èn gang.
+	\item \textbf{Tre}\\ Tre kan utvinnest dersom hovedbasen har blitt
+oppgradert til dette. Tre er på samme nivå som plast, med andre ord må
+spilleren velge mellom desse to i begynnelsen.
+	\item \textbf{Jern}\\ Jern er mulig å utvinne dersom spilleren først
+oppgraderer til tre.
+	\item \textbf{Stål}\\ Stål bygger på at spilleren først har
+oppgradert til plast.
+	\item \textbf{Titan}\\ Titan er den siste ressursen som er mulig å
+utvinne. For å kunne utvinne titan må spilleren først ha skaffet seg
+alle utvinningsutvidelsene til hovedbasen.
 \end{description}
 \subsubsection{Ressursutvinning}
 En spiller skaffer seg ressurser ved å gjenvinne søppel som ligger
