--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -92,8 +92,7 @@ I tillegg kan lokale biologiske katastrofer inntreffe, der det vil bryte ut sykd
 
 \subsection{Spillatmosfære}
 
-Ved spillstart er himmelen full av mørke skyer og musikken vil ha et melankolsk preg. Noe som gjør 
- at stemningen er litt tung og dyster. Fargene på spillområdet er uklare og skitne fordi øya er forurenset av søppel.
+Ved spillstart er himmelen full av mørke skyer og musikken vil ha et melankolsk preg. Stemningen er tung og dyster. Fargene på spillområdet er uklare og skitne fordi øya er forurenset av søppel.
 Når søppel fjernes fra øya vil stemningen lysne ved at skyene blir hvite og forsvinner med tiden. Musikken blir lystigere, 
 solen kommer fram og fargene på øya øker gradvis i styrke. Det vil begynne å gro gress, blomster og 
 trær på områder av øya som blir frigjort for søppel, og små hus vil dukke opp ettersom øya blir renere. 
@@ -108,39 +107,19 @@ Når en øy er helt overfylt med søppel vil den synke ned i havet. Dette gjør 
 
 \subsection{Game Play og taktikker}
 
-I dette avsnittet tar vi for oss et eksempel med tre deltakere som alle bruker forskjellige taktikker. De forskjellige taktikkene er basert på alfa-testing av utført av Re3. Hver taktikk vil få en kort beskrivelse hvor fordeler og ulemper vil bli nevnt. Antall ressurser og hitpoints vil ikke gis i detalj.
+I dette avsnittet tar vi for oss et eksempel med tre deltakere som alle bruker forskjellige taktikker. De forskjellige taktikkene er basert på alfa-testing utført av Re3. Hver taktikk vil få en kort beskrivelse hvor fordeler og ulemper vil bli nevnt. Antall ressurser og hitpoints vil ikke gis i detalj.
 
 Spillet starter og hver spiller ser på en mørk øy fyllt av søppel. Det er en dyster og melankolsk stemning, og man får en følelse av at man har reist fram i tid til et post-apokalyptisk samfunn. 
 
-Spilleren med navnet Professor har valgt å kun fokusere på oppgraderinger knyttet til effektivitet for å raskt bli kvitt søppelet sitt gjennom gjenvinning på miljøstasjonen. Denne taktikken kan raskt avslutte spillet, men risikoen er meget høy. Dersom Professor blir angrepet må han endre taktikk raskt. Forhåpentligvis kommer ikke angrepene med en gang, og han vil raskt ha flere ressurser enn de andre spillerne. Ettersom spillets gang går bør Professor bygge en mur, for å unngå at et enkelt angrep med et høyt utviklet våpen tar miljøstasjonen hans på ett skudd. Hvis han klarer å å komme seg til effektivitets nivå 3 før han blir angrepet, blir han veldig raskt kvitt søppelet sitt, ettersom denne oppgraderingen dobler gjenvinningsraten. 
+Spilleren med navnet Professor har valgt å kun fokusere på oppgraderinger knyttet til effektivitet for å raskt bli kvitt søppelet sitt gjennom gjenvinning på miljøstasjonen. Denne taktikken kan raskt avslutte spillet, men risikoen er meget høy. Dersom Professor blir angrepet må han endre taktikk raskt. Forhåpentligvis kommer ikke angrepene med en gang, og han vil raskt ha flere ressurser enn de andre spillerne. Etterhvert som spillet går bør Professor bygge en mur, for å unngå at et enkelt angrep med et høyt utviklet våpen tar miljøstasjonen hans på ett skudd. Hvis han klarer å komme seg til effektivitets nivå 3 før han blir angrepet, blir han veldig raskt kvitt søppelet sitt, ettersom denne oppgraderingen dobler gjenvinningsraten. 
 
 Spilleren MadMax velger å kjøre en aggresiv taktikk. Det første han gjør er å bygge et papirfly, slik at han allerede fra starten klarer å dumpe noe av søppelet sitt på de andre spillerne. Fordelen med et kjapt angrep er at spillerne som blir angrepet alltid vil ligge et skritt bak, og ikke kunne angripe han tilbake. Det første de andre spillerne vil gjøre etter et angrep er å sikre miljøstasjonen sin mot utslettelse ved å bygge en mur. MadMax kan dermed bruke ressursene sine på våpen hele tiden, mens de andre spillerne må fortsette å reparere og bygge muren sin. MadMax er avhengig av å utslette de andre spillerne eller sende bort alt søppelet sitt raskt. Hvis det tar for lang tid vil de andre spillerne etterhvert få bedre oppgraderinger, og MadMax sine angrep vil til slutt ikke kunne penetrere muren til de andre spillerne.
-lokale katastrofer.
 
-beskriv siste spiller
+Den tredje spilleren, N00b87, bestemmer seg for en defensiv og sikker spilltaktikk. Spilleren satser på å komme seg raskt gjennom oppgraderingene, samtidig som han hele tiden oppgraderer muren og våpnene sine. Ettersom N00b87 bruker ressurser på alt som er tilgjengelig bruker han lengre tid på å utvikle seg enn de andre spillerne. Men N00b87 er likevel godt sikret mot angrep, og kan raskt gjøre et motangrep som forhåpentligvis roer aggresiviteten til eventuelle angripere. Denne taktikken har få overaskelsesmomenter, men likevel anses dette som taktikken som oftest vil vinne. Men det er også mange momenter som fører til at denne "sikre" taktikken ikke vil vinne. Ettersom N00b87 ikke angriper så har Professor mulighet til å bli kvitt alt sitt søppel lenge før N00b87. Dersom MadMax angriper N00b87 helt fra starten, vil N00b87 slite med å komme seg gjennom planen sin. 
 
+Det er ingen taktikk som er best. Det er mange tilfeldigheter som kan snu spillet. Hvem blir angrepet? Blir en spiller angrepet av mange spillere er spilleren dømt fra starten. Globale og lokale katastrofer vil også bidra til å snu spillet, og kan til og med overraske den klare lederen av et spill. Det er tre spillere i eksempelet over, og det er helt åpent hvem som kan vinne!
 
-Using this outline to create a descriptive paragraph about how the game is played. 
-
-The idea is that you want the person imagine they are actually playing the game.
-
-Do not use Generic names when writing about the game play. 
-
-Example: No one wants to here that enemy 1 will have more hit points than enemy 2. Instead we should talk about how the Lazarus Fighter has more armour than Apollo Fighter.
-
-This outline will vary according to the type of game. \\
-Opening the game application\\
-Game Options \\
-Story Synopsis\\
-Modes\\
-Game Elements\\
-Game Levels\\
-Player’s Controls\\
-Winning\\
-Losing\\
-End\\
-Why is all this fun?\\
-\\
+Adrenalinet av å bombe de andre spillerne og å selv bli knust; raske avgjørelser for å kjapt hente seg inn eller ta nådestøtet for å ta seieren; valg av taktikker som kan overraske de andre spillerne; plutselige katastrofer som kan snu spillet mot alle retninger. Denne spenningen er noe av det som gjør Garbage Alert til et kjekt spill som til og med får din bestemor til å trekke på smilebåndet.
 
 \input{spillmatrise}
 \input{spillerpremier}
