Førsteutkast til brukergrensesnittkapittel

--- a/konseptdokument/ui.tex
+++ b/konseptdokument/ui.tex
@@ -8,5 +8,40 @@
 % still playable?
 
 % A visual representation can be added, where we relate the physical
-% controls to the actions in the game. 
+% controls to the actions in the game.
+
+
+% TODO
+% * Skrive om de svakeste elementene i grensesnittet
+% * Referere til screenshots
+% * Inkludere noe tekst om lydbildet?
+% * Generell formattering, sammenslåing og sortering av avsnitt
+
 \subsection{Brukergrensesnitt}
+
+
+
+Brukergrensessnittet i spillet er i prototypen noe infantilt og uferdig.
+
+
+Vi har bevisst valgt å holde språket i spillet norsk, og overalt hvor en finner tekst i spillet vil den være på norsk. % bah, møkkasetning.
+
+
+Det en først ser når en starter spillet er en introskjerm som med sin grafikk og lydbilde er ment å sette spilleren i et kompetetivt sinnelag.
+
+Fra denne skjermen er det mulig å starte spillet ved å trykke den store knappen markert "Start".
+En mer ferdig versjon vil andre valg fra denne skjermen være å stille inn ting som spillernavn, samt mulighet for å koble flere spillere sammen i et flerspillerspill.
+
+
+Spillets hovedskjerm % Forklare litt bedre hva vi mener med hovedskjerm
+består av et overblikksbilde av alle øyer som er med i spillet. I prototypen er antallet begrenset til to, men en mer moden versjon vil inneholde muligheten til å spille flere enn to stykker samtidig. En skiller mellom en selv og andre ved bruk av ulike farger på spillernes miljøstasjon, våpen og forsvar. I prototypen har vi valgt å fargelegge de to faksjonene rød og blå.
+
+I prototypen er denne skjermen et statisk fugleperspektiv av alle øyene og alle spillets elementer. En ferdig versjon vil og inneholde muligheten til å veksle mellom et detaljbilde av ens egen øy og overblikksbildet over alle øyer. Hvorvidt dette vil gjøres via en knapp som veksler mellom de to visningsmodi eller om en vil "klype for å zoome" er på dette stadiet uvisst og bør testes via brukertesting for å finne den optimale metoden.
+
+
+Garbage Alert er tenkt å først og fremst spilles på mobiltelefoner og andre enheter med berøringsskjerm. En interagerer derfor med elementene på skjermen ved å trykke på de. Det en må være spesielt oppmerksom på med slike skjermer er å holde knapper store nok, samt at aller elementer på skjermen må være forskjellige nok til at det er enkelt å skille de fra hverandre på små skjermer.
+
+Spillet kan og spilles på en datamaskin i en nettleser, og en kan derfor også bruke en musepeker for å trykke på elementene på samme måte.
+
+
+Merk at da vi under utviklingen kun har testet prototypen på en dataskjerm er ikke spillet per nå tilpasset mobiltelefoner i så stor grad som det burde være. Enkle tester på mobiltelefon har dog blitt gjort, men har vært nedprioritert grunnet tidspress.
