--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -1,26 +1,50 @@
 \section{Grafisk fremstilling}
 
-Her skal det komme bilde av ressurser
-
 \begin{center}
-\includegraphics[scale=0.75]{ressurser.png}
+\begin{figure}
+\includegraphics[scale=0.75]{images/splashscreen.png}
+\label{fig:splashscreen}
+\end{figure}
 \end{center}
 
-Her skal det komme bilde av våpen
-
 \begin{center}
-\includegraphics[scale=0.75]{vaapen.png}
+\begin{figure}
+\includegraphics[scale=0.75]{images/Oppgradering.png}
+\label{fig:Oppgradering}
+\end{figure}
 \end{center}
 
-
-Her skal det komme bilde av forsvar/mur
-
 \begin{center}
-\includegraphics[scale=0.75]{forsvar.png}
+\begin{figure}
+\includegraphics[scale=0.75]{images/Eksplosjon.png}
+\label{fig:Explosjon}
+\end{figure}
 \end{center}
 
-Her skal det komme bilde av gameplay (screenshot)
+\begin{center}
+\begin{figure}
+\includegraphics[scale=0.75]{images/OppgradereMur.png}
+\label{fig:OppgradereMur}
+\end{figure}
+\end{center}
 
 \begin{center}
-\includegraphics[scale=0.75]{screenshot.png}
+\begin{figure}
+\includegraphics[scale=0.75]{images/Tsunami.png}
+\label{fig:Tsunami}
+\end{figure}
+\end{center}
+
+\begin{center}
+\begin{figure}
+\includegraphics[scale=0.75]{images/Kolera.png}
+\label{fig:Kolera}
+\end{figure}
+\end{center}
+
+\begin{center}
+\begin{figure}
+\includegraphics[scale=0.75]{images/OppgradereEnv.png}
+\label{fig:OppgradereEnv}
+\end{figure}
 \end{center}
