--- a/konseptdokument/spillerpremier.tex
+++ b/konseptdokument/spillerpremier.tex
@@ -5,10 +5,12 @@
 % player can use the object.
 \subsection{Spillerpremier}
 
-Gjennom å oppgradere ens miljøstasjon vil en kunne visuelt se at øya blir renere, atmosfæren blir klarere og bakgrunnsmusikken blir penere. Lystige lydeffekter signaliserer at en gjør noe som gir spilleren en fordel i forhold til motspillerne, for eksempel når en oppgraderer ens utstyr eller utfører et vellykket angrep mot sine motstandere. Dette håper vi skaper en positiv følelse av mestring hos spilleren. 
+Gjennom å oppgradere miljøstasjonen vil en kunne visuelt se at øya blir renere, atmosfæren blir klarere og bakgrunnsmusikken blir penere. Lystige lydeffekter signaliserer at en gjør noe som gir spilleren en fordel i forhold til motspillerne, for eksempel når spilleren oppgraderer utstyr eller utfører et vellykket angrep mot sine motstandere. Dette skal skaper en positiv følelse av mestring hos spilleren. 
 
 Videre er der en intrisitt verdi i å vinne et spill over ens medspillere.
 
-For å kunne underbygge spillets underliggende tematikk om miljøvennlighet vil naturen straffe spillerne om de er er for miljøuvennlige med naturkatastrofer.
+For å kunne underbygge spillets underliggende tematikk om miljøvennlighet vil naturen straffe spillerne som ikke tenker miljø. Geologiske og biologiske katastrofer er konsekvensene som rammer en eller alle spillerne.
 
 På samme måte som at muntre lydeffekter underbygger gode handlinger gjort av spilleren, vil dystre lydeffekter signalisere negative hendelser. Dette kan for eksempel være i det en blir angrepet av motspillerne. 
+
+Når man vinner eller taper et spill vil dette føres opp på spillerens profil. Med dette kan hver spiller ha kontroll over sin egen spillstatistikk. På spillerens profil finnes det også et profilbilde av en kriger. Bildet vil også være synlig for de spillerne man spiller mot under et spill. Man begynner med et default profilbilde, og etterhvert som man vinner mange spill får man muligheten til å endre dette bilde. Målet med dette er å gi spilleren en visuell prestasjonspremie, i tillegg får de spillerne man spiller mot en idè om hvor mye motspilleren har spilt spillet tidligere.
