skrevet om geologi i forhold til ressurser, og referanse

--- a/konseptdokument/referanser.bib
+++ b/konseptdokument/referanser.bib
@@ -20,3 +20,11 @@ Management},
 	Howpublished={\url{http://www.scrum.org/storage/scrumguides/Scrum%20Guide%20-%20NO.pdf#view=fit}},
 	Year=2010
 }
+
+@misc{mohs,
+	Author={Prestvik, Tore},
+	Title={Mineralogi: en innføring i krystallografi og mineralogi},
+	Howpublished={Vett og Viten},
+	Year=2005
+}
+	
