--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -12,7 +12,7 @@ i Garbage Alert.
 \subsubsection{Ressurser}
 Ressurser er et viktig element i Garbage Alert. Ressursene er det som
 gjør at spillere kan utvikle basen sin, bygge forsvar og utvikle angrep.
-!!Todo: Andreas, skrive litt om valga av de ulike ressursene?
+Valget av ressurser er basert på Mohs hardhetsskala av mineraler \cite{mohs}. Mohs hardhetskala er en liste over mineraler i rekkefølge etter absolutt hardhet, laget av geologen Friedrich Mohs. Hvert mineral skal kunne skrape mineralet som står foran på listen. Ressursene i Garbage Alert er ikke helt korrekte i forhold til Mohs hardhetsskala, men basert på denne. Idèen er at hver de seks ressursene i spillet følger samme regel, nemlig at den ene ressursen er hardere enn den andre og har mulighet til å ødelegge den. 
 De forskjellige typene utvinnbare ressurser er:
 \begin{description}
 	\item \textbf{Papp}\\ Denne ressursen kan utvinnest uten å måtte
@@ -21,8 +21,8 @@ men skaper kun relativt svake angrep/forsvar.
 	\item \textbf{Plast}\\ Denne ressursen kan man utvinne etter å ha
 oppgradert hovedbasen èn gang.
 	\item \textbf{Tre}\\ Tre kan utvinnest dersom hovedbasen har blitt
-oppgradert til dette. Tre er på samme nivå som plast, med andre ord må
-spilleren velge mellom desse to i begynnelsen.
+oppgradert til dette. Tre er på samme oppgraderingsnivå som plast, med andre ord må
+spilleren velge mellom desse to i begynnelsen. Tre er derimot hardere enn plast i dette spillet.
 	\item \textbf{Jern}\\ Jern er mulig å utvinne dersom spilleren først
 oppgraderer til tre.
 	\item \textbf{Stål}\\ Stål bygger på at spilleren først har
@@ -31,6 +31,10 @@ oppgradert til plast.
 utvinne. For å kunne utvinne titan må spilleren først ha skaffet seg
 alle utvinningsutvidelsene til hovedbasen.
 \end{description}
+
+
+Det er også mulig å skade forsvar/våpen som er bygget av en bedre ressurs enn våpenet. Dette er implementert slik at ingen våpen/forsvar blir uovervinnelige.
+
 \subsubsection{Ressursutvinning}
 En spiller skaffer seg ressurser ved å gjenvinne søppel som ligger
 spredt rundt på øya. Dette blir gjort ved hjelp av gjenvinningsstajonen
